k8s/nita-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: nita
  name: nita
spec:
  finalizers:
  - kubernetes
