k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nita
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -v
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml -v
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/nita-network: "true"
        io.kompose.service: db
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          image: mariadb:10.11
          name: db
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - mysql -u root -proot -e "SELECT 1"
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 12
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb
      restartPolicy: Always
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb
status: {}
