k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nita
  labels:
    io.kompose.service: db
  name: db
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    io.kompose.service: db
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
