k8s/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nita
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -v
    kompose.version: 1.22.0 (955b78124)
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: "8443"
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    io.kompose.service: jenkins
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
