k8s/junos-mcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nita
  labels:
    app: junos-mcp
  name: junos-mcp
spec:
  selector:
    app: junos-mcp
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
